Move js folder to assets/ and configure gulp

--- a/package.json
+++ b/package.json
@@ -17,10 +17,17 @@
     "url": "https://github.com/Automattic/_s/issues"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.1",
     "@wordpress/scripts": "^9.0.0",
     "dir-archiver": "^1.1.1",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.1.0",
     "node-sass": "^4.14.0",
-    "rtlcss": "^2.5.0"
+    "postcss-import": "^12.0.1",
+    "rtlcss": "^2.5.0",
+    "tailwindcss": "^1.6.2"
   },
   "rtlcssConfig": {
     "options": {
@@ -42,5 +49,8 @@
     "lint:scss": "wp-scripts lint-style 'sass/**/*.scss'",
     "lint:js": "wp-scripts lint-js 'js/*.js'",
     "bundle": "dir-archiver --src . --dest ../_s.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map"
+  },
+  "dependencies": {
+    "bulma": "^0.9.0"
   }
 }
