--- a/.editorconfig
+++ b/.editorconfig
@@ -1,22 +1,29 @@
-# This file is for unifying the coding style for different editors and IDEs
-# editorconfig.org
-
-# WordPress Coding Standards
-# https://make.wordpress.org/core/handbook/coding-standards/
-
 root = true
 
 [*]
-charset = utf-8
-end_of_line = lf
 insert_final_newline = true
-trim_trailing_whitespace = true
-indent_style = tab
-indent_size = 4
+end_of_line = lf
 
-[{.jshintrc,*.json,*.yml}]
+[*.{js,py}]
+charset = utf-8
+
+[*.php]
+indent_size = 4
+indent_style = space
+
+[*.{html,css,sass,scss}]
+indent_size = 2
+indent_style = space
+
+[*.{js,jsx,ts,tsx,vue}]
+indent_size = 4
+indent_style = tab
+
+[{package.json}]
 indent_style = space
 indent_size = 2
 
-[{*.txt,wp-config-sample.php}]
-end_of_line = crlf
+[*.md]
+indent_size = 2
+indent_style = space
+trim_trailing_whitespace = false
