--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         },
         "dependencies": {
                 "@iconfu/svg-inject": "^1.2.3",
+                "autoprefixer": "^9.8.6",
                 "bulma": "^0.9.0",
+                "cssnano": "^4.1.10",
                 "remixicon": "^2.5.0"
         }
 }
